# manga

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: check.yaml  release.yaml
end2end/: Cargo.toml
end2end/migrations/: 01_init_data.sql
end2end/src/: lib.rs  postgres_test_container.rs  selenium_test_container.rs
end2end/tests/: access_website.rs  e2e.rs
helm-chart/: Chart.yaml  values.yaml
helm-chart/templates/: NOTES.txt  _helpers.tpl  (+7 more)
migrations/: 20240915024207_create_enum_weekday.sql  20240915024855_create_enum_manga_source.sql  20240915025220_create_table_source.sql  20241110092112_add_comicdays_source.sql  20241110095359_add_magazine_pocket_source.sql  20241112025411_add_yanmaga_source.sql  20241112062133_add_comic_pixiv_source.sql  20241112094155_add_urasunday_source.sql  20241124032157_add_comic_walker_source.sql  20241126220153_add_tonariyj_source.sql  20241201004354_add_sunday_webry_source.sql  20241206121223_add_manga_up_source.sql  20241214022720_add_comic_fuz_source.sql  20241214035639_add_gangan_online_source.sql  20241215054246_add_gamma_plus_source.sql  20241216064621_add_champion_cross_source.sql  20241231022330_add_ganma_source.sql  20250104101813_add_young_animal_source.sql  20250105040225_add_mecha_comic_source.sql  20250127132533_add_youngchampion_source.sql  20250311011354_add_ichijin_plus_source.sql  20250407001413_add_comic_action.sql  20250827024913_add_comic_gardo.sql  20250828092333_add_comic_medu.sql
src/: app.rs  lib.rs  main.rs  server.rs  state.rs  testcontainer_helper.rs
style/: main.scss
(+80 files in other folders)
