[package]
name = "end2end"
version = "0.1.0"
edition = "2021"

[dependencies]
testcontainers = { version = "0.23.3" }
testcontainers-modules = { version = "0.11.6", features = ["postgres"] }
ctor = "0.2.8"
tokio = { version = "1", features = ["rt-multi-thread"] }
color-eyre = { version = "0.6", default-features = false }
fantoccini = "0.21.5"
